--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,15 @@
       href="../public/images/apple-touch-icon-152x152.webp"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="../src/scss/style.css" />
     <title>Yelo Bank - Müasir Bank Xidmətləri</title>
   </head>
 
   <body>
-
     <div class="mobile-top" style="background-image: url(images/modal_bg.webp)">
       <div class="mobile-top-inner">
         <div class="logo-side">
@@ -433,32 +435,19 @@
               <div class="slide-img">
                 <div class="yellow-bg"></div>
                 <div class="image">
-                  <img src="images/9_9-fb-cover_1_1.png" alt="9_9-fb-cover_1_1">
+                  <img
+                    src="images/9_9-fb-cover_1_1.png"
+                    alt="9_9-fb-cover_1_1"
+                  />
                 </div>
               </div>
               <div class="slide-content">
                 <div class="content-inner">
                   <h3>50 000 AZN-dək</h3>
                   <p>Qızıl payız krediti</p>
-                  <a href="#" class="curved-btn">Sifariş et</a>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slide-img">
-                <div class="yellow-bg"></div>
-                <div class="image">
-                  <img src="images/taksit_karti_-_sayt_cover-aze_updated.webp" alt="taksit_karti_-_sayt_cover-aze_updated">
-                </div>
-              </div>
-              <div class="slide-content">
-                <div class="content-inner">
-                  <h3>Taksit funksiyalı kredit kartı</h3>
-                  <p>70/24 üstünlüklərlə</p>
                   <a href="#">
-                    <div class="more-details">
-                      <span>Daha ətraflı</span>
-                      <img src="images/bl_arr_bttn.svg" alt="bl_arr_bttn">
+                    <div class="curved-btn">
+                      <span> Sifariş et </span>
                     </div>
                   </a>
                 </div>
@@ -468,14 +457,22 @@
               <div class="slide-img">
                 <div class="yellow-bg"></div>
                 <div class="image">
-                  <img src="images/onlayn_kredit-saytcover_1.png" alt="onlayn_kredit-saytcover_1">
+                  <img
+                    src="images/taksit_karti_-_sayt_cover-aze_updated.webp"
+                    alt="taksit_karti_-_sayt_cover-aze_updated"
+                  />
                 </div>
               </div>
               <div class="slide-content">
                 <div class="content-inner">
-                  <h3>Banka gəlmədən</h3>
-                  <p>Tam onlayn kredit</p>
-                  <a href="#" class="curved-btn">Sifariş et</a>
+                  <h3>Taksit funksiyalı kredit kartı</h3>
+                  <p>70/24 üstünlüklərlə</p>
+                  <a href="#">
+                    <div class="more-details">
+                      <span>Daha ətraflı</span>
+                      <img src="images/bl_arr_bttn.svg" alt="bl_arr_bttn" />
+                    </div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -483,14 +480,40 @@
               <div class="slide-img">
                 <div class="yellow-bg"></div>
                 <div class="image">
-                  <img src="images/2-deq-krdt-aze.png" alt="2-deq-krdt-aze">
+                  <img
+                    src="images/onlayn_kredit-saytcover_1.png"
+                    alt="onlayn_kredit-saytcover_1"
+                  />
+                </div>
+              </div>
+              <div class="slide-content">
+                <div class="content-inner">
+                  <h3>Banka gəlmədən</h3>
+                  <p>Tam onlayn kredit</p>
+                  <a href="#">
+                    <div class="curved-btn">
+                      <span> Sifariş et </span>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide-img">
+                <div class="yellow-bg"></div>
+                <div class="image">
+                  <img src="images/2-deq-krdt-aze.png" alt="2-deq-krdt-aze" />
                 </div>
               </div>
               <div class="slide-content">
                 <div class="content-inner">
                   <h3>Krediti cəmi 2 dəqiqəyə al</h3>
                   <p>Onlayn sifariş et, filiala gəlmə</p>
-                  <a href="#">Sifariş et</a>
+                  <a href="#">
+                    <div class="curved-btn">
+                      <span> Sifariş et </span>
+                    </div>
+                  </a>
                 </div>
               </div>
             </div>
@@ -499,7 +522,6 @@
         </div>
       </section>
     </main>
-
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../src/js/main.js"></script>
