--- a/public/index.html
+++ b/public/index.html
@@ -114,9 +114,9 @@
 
     <div class="bg-color"></div>
 
-    <div class="modals">
+    <div class="modals active">
       <div class="modals-group">
-        <div class="modal-item">
+        <div class="modal-item active show" data-modal="stories-modal">
           <div class="modal-content">
             <div class="swiper storiesSwiper">
               <div class="swiper-wrapper">
@@ -201,8 +201,8 @@
             </div>
             <div class="stories-nav">
               <div class="modal-close" style="background-image: url(images/close.svg);"></div>
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next swiper-button"></div>
+              <div class="swiper-button-prev swiper-button"></div>
               <div class="swiper-stories-pagination"></div>
             </div>
             <div class="stories-progress">
