--- a/public/index.html
+++ b/public/index.html
@@ -114,9 +114,9 @@
 
     <div class="bg-color"></div>
 
-    <div class="modals active">
+    <div class="modals">
       <div class="modals-group">
-        <div class="modal-item active show" data-modal="stories-modal">
+        <div class="modal-item" data-modal="stories-modal">
           <div class="modal-content">
             <div class="swiper storiesSwiper">
               <div class="swiper-wrapper">
@@ -639,7 +639,7 @@
           <div class="swiper stories container">
             <div class="swiper-wrapper">
               <div class="story swiper-slide">
-                <a href="javascript:void(0)">
+                <a href="javascript:void(0)" data-slide="1">
                   <div class="story-desc">
                     <span class="tag">Yelo kart</span>
                     <b
@@ -656,7 +656,7 @@
                 </a>
               </div>
               <div class="story swiper-slide">
-                <a href="javascript:void(0)">
+                <a href="javascript:void(0)" data-slide="2">
                   <div class="story-desc">
                     <span class="tag">Kredit</span>
                     <b
@@ -673,7 +673,7 @@
                 </a>
               </div>
               <div class="story swiper-slide">
-                <a href="javascript:void(0)">
+                <a href="javascript:void(0)" data-slide="3">
                   <div class="story-desc">
                     <span class="tag">Hissələ</span>
                     <b
