--- a/public/index.html
+++ b/public/index.html
@@ -737,11 +737,12 @@
               <div class="loan-calc">
                 <div class="loan-title">
                   <b>Kredit kalkulyatoru</b>
-                  <a class="arr-btn">Daha ətraflı</a>
+                  <a href="#" class="arr-btn" >Daha ətraflı
+                  </a>
                 </div>
                 <div class="loan-desc">
-                  <div class="inputs">
-                    <div class="loan-amount">
+                  <div class="loan-inputs">
+                    <div class="loan-item loan-amount">
                       <p>Məbləğ</p>
                       <input
                         name="credit"
@@ -749,7 +750,7 @@
                         value="25000"
                         class="range-result"
                       />
-                      <span class="currency">AZN</span>
+                      <span class="loan-info">AZN</span>
                       <input
                         type="range"
                         min="400"
@@ -757,9 +758,9 @@
                         step="100"
                         value="25000"
                         class="range"
-                      />
+                        style="--min: 400; --max: 50000; --val: 23700;"/>
                     </div>
-                    <div class="loan-term">
+                    <div class="loan-item loan-term">
                       <p>Müddət</p>
                       <input
                         name="month"
@@ -768,7 +769,7 @@
                         value="12"
                         class="range-result"
                       />
-                      <div class="loan-month">ay</div>
+                      <div class="loan-info">ay</div>
                       <input
                         type="range"
                         min="6"
@@ -776,9 +777,10 @@
                         step="1"
                         value="12"
                         class="range"
+                        style="--min: 6; --max: 59; --val: 31;"
                       />
                     </div>
-                    <div class="loan-percent">
+                    <div class="loan-item loan-percent">
                       <p>İllik faiz dərəcəsi</p>
                       <input
                         name="percent"
@@ -786,7 +788,7 @@
                         value="9.9"
                         class="range-result"
                       />
-                      <div class="loan-percentage">%</div>
+                      <div class="loan-info">%</div>
                       <input
                         type="range"
                         min="9.9"
@@ -794,7 +796,8 @@
                         step="0.1"
                         value="9.9"
                         class="range"
-                      />
+                        style="--min: 9.9; --max: 20; --val: 14.4;"
+                        />
                     </div>
                   </div>
                   <div class="loan-result">
