--- a/public/index.html
+++ b/public/index.html
@@ -825,14 +825,16 @@
 
       <!-- Useful for you -->
 
-      <section class="usefulForyou">
+      <section class="usefulForYou">
         <div class="container">
           <div class="section-title">
             <b>Sizin üçün faydalı</b>
           </div>
           <div class="section-content row">
             <div class="col">
-              <div class="col-content">
+              <div
+                class="col-content"
+              >
                 <div class="app-image">
                   <div
                     class="app-phone"
@@ -849,61 +851,50 @@
                     Yelo-dan yeni və parlaq mobil əlavə. Hesablarını izlə,
                     köçürmə və ödənişlərini sürətli et.
                   </p>
-                  <div class="app-links">
-                    <ul>
-                      <li>
-                        <a
-                          href="https://apps.apple.com/az/app/yelo/id1515449668"
-                          target="_blank"
-                          class="app-link"
+                  <ul>
+                    <li>
+                      <a
+                        href="https://apps.apple.com/az/app/yelo/id1515449668"
+                        target="_blank"
+                        class="app-link"
+                      >
+                        <div
+                          class="app apple"
                         >
-                          <div
-                            class="app apple"
-                            style="
-                              background-image: url(images/apple_black.svg);
-                            "
-                          >
-                            <span>Download on the</span>
-                            <p>App Store</p>
-                          </div>
-                        </a>
-                      </li>
-                      <li>
-                        <a
-                          href="https://play.google.com/store/apps/details?id=az.yelo.app&hl=ru&pli=1"
-                          target="_blank"
-                          class="app-link"
+                          <span>Yüklə</span>
+                          <p>App Store</p>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://play.google.com/store/apps/details?id=az.yelo.app&hl=ru&pli=1"
+                        target="_blank"
+                        class="app-link"
+                      >
+                        <div
+                          class="app android"
                         >
-                          <div
-                            class="app android"
-                            style="
-                              background-image: url(images/google_play_black.svg);
-                            "
-                          >
-                            <span>Get it on</span>
-                            <p>Google Play</p>
-                          </div>
-                        </a>
-                      </li>
-                      <li>
-                        <a
-                          href="https://appgallery.huawei.com/#/app/C104500649"
-                          target="_blank"
-                          class="app-link"
+                          <span>Yüklə</span>
+                          <p>Google Play</p>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://appgallery.huawei.com/#/app/C104500649"
+                        target="_blank"
+                        class="app-link"
+                      >
+                        <div
+                          class="app huawei"
                         >
-                          <div
-                            class="app huawei"
-                            style="
-                              background-image: url(images/huawei_play_black.svg);
-                            "
-                          >
-                            <span>Get it on</span>
-                            <p>AppGallery</p>
-                          </div>
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
+                          <span>Yüklə</span>
+                          <p>AppGallery</p>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -993,8 +984,12 @@
                     </div>
                   </div>
                 </div>
-                <p class="info-p">Region filiallarında məzənnələr fərqli ola bilər</p>
-                <a href="exchangeRate.html" class="all-exchanges">Bütün məzənnələr</a>
+                <p class="info-p">
+                  Region filiallarında məzənnələr fərqli ola bilər
+                </p>
+                <a href="exchangeRate.html" class="all-exchanges"
+                  >Bütün məzənnələr</a
+                >
               </div>
             </div>
           </div>
