added Currency Rates

--- a/public/index.html
+++ b/public/index.html
@@ -900,14 +900,14 @@
             </div>
             <div class="col">
               <div class="col-inner">
-                <div class="col_title">
+                <div class="col-title">
                   <b>Valyuta məzənnələri</b>
-                  <div class="change_rates">
-                    <a href="javascript:void(0)" class="active_lang open_select"
+                  <div class="change-rates">
+                    <a href="javascript:void(0)" class="active-rate"
                       >Nağd</a
                     >
-                    <div class="select_box">
-                      <div class="select_content">
+                    <div class="select-box">
+                      <div class="select-content">
                         <ul>
                           <li>
                             <a data-cash="1" href="#" class="active">Nağd</a>
@@ -928,22 +928,22 @@
                       value=""
                       class="selling-input"
                     />
-                    <select name="from" class="s-currency">
-                      <option value="azn" selected="">AZN</option>
-                      <option value="usd">USD</option>
-                      <option value="eur">EUR</option>
+                    <select name="from" class="s-currency" style="background-image: url(images/s_curr.svg);">
+                      <option value="AZN" selected="">AZN</option>
+                      <option value="USD">USD</option>
+                      <option value="EUR">EUR</option>
                     </select>
                   </div>
                   <div class="c-line">
                     <span class="c-buying">Alıram</span>
-                    <select name="to" class="s_-urrency">
-                      <option value="azn" style="display: none">AZN</option>
-                      <option value="usd" selected="">USD</option>
-                      <option value="eur">EUR</option>
+                    <select name="to" class="s-currency" style="background-image: url(images/s_curr.svg);">
+                      <option value="AZN" style="display: none">AZN</option>
+                      <option value="USD" selected="">USD</option>
+                      <option value="EUR">EUR</option>
                     </select>
                   </div>
                   <div class="c-result">
-                    <div class="c_item">
+                    <div class="c-item">
                       <p>Valyuta</p>
                       <b data-curr="usd">USD</b>
                       <b data-curr="eur">EUR</b>
@@ -965,7 +965,7 @@
                         >1.7700</b
                       >
                     </div>
-                    <div class="cr-item">
+                    <div class="c-item">
                       <p>Satış</p>
                       <b
                         class="cr-item-sell"
